[project]
name = "orbit-openenv"
version = "1.0.0"
description = "Orbit — AI Space Mission Architect. An OpenEnv environment for orbital mechanics simulation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn==0.43.0",
    "pydantic==2.12.5",
    "matplotlib==3.10.8",
    "numpy==2.2.6",
    "openai==2.30.0",
    "websockets==16.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Nitnem/orbit-env"
Repository = "https://github.com/Nitnem06/orbit-openenv"